--- a/react_project/src/components/nav/Nav.css
+++ b/react_project/src/components/nav/Nav.css
@@ -8,6 +8,8 @@ html, body{
     height: 2600px;
     font-family: 'Oswald', sans-serif;
 font-family: 'Pixelify Sans';
+overflow-x: hidden;
+
 /* font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Roboto Condensed', sans-serif; */
@@ -102,7 +104,7 @@ color: #fff;
 
 
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 1024px){
   .burguer{
     display: none;
   }
