--- a/react_project/src/components/About Me/aboutme.css
+++ b/react_project/src/components/About Me/aboutme.css
@@ -8,19 +8,19 @@
     height: 88vh;
     /* background-color: var(--mainbg);     */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
 .left{
-    width: 400px;
-    height: 400px;
+    width: 30%;
+    height: 60%;
 }
 
 .left img{
     width: 100%;
     height: 100%;
-    border: 20px solid white;
+    border: 5px solid white;
     border-radius: 50%;
     box-shadow: 0px -2px 9px gray;
 }
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 25px;
+    /* margin-left: 25px; */
 }
 
 
@@ -55,17 +55,7 @@
     font-size: 60px;
 }
 
-@media screen and (max-width: 1507px){
-    .about{
-        width: 100%;
-        height: 88vh;
-        /* background-color: var(--mainbg);     */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-} 
+
 
 @media screen and (max-width: 800px){
     .right{
@@ -77,8 +67,7 @@
         height: 50%;
     }
     .left img{
-        /* width: 80%;
-        height: 80%; */
+
         border: 10px solid white;
         border-radius: 50%;
         box-shadow: 0px -2px 9px gray;
@@ -90,7 +79,7 @@
     .right p{
         font-size: 30px;
         letter-spacing: 2px;
-        margin-top: 60px;
+        /* margin-top: 60px; */
         width: 50%;    
         text-align: center;
         opacity: 0.3;
@@ -113,22 +102,72 @@
 } 
 
 @media screen and (max-width: 450px){
-    .right p{
-        font-size: 20px;
+
+    .about{
+        justify-content: center;
+        align-items:flex-end;
     }
-     
-    
+    .left{
+        display: none;
+    }
     .right h1{
-        font-size: 40px;
+        font-size: 100%;
         margin-bottom: 10px;
     }
     
     .right h2{
-        font-size: 30px;
+        font-size: 100%;
         color: red;
         margin-bottom: 10px;
     }
     .right h3{
-        font-size: 20px;
+        font-size: 100%;
     }
+}
+
+
+@media screen and (max-width: 1400px) and (min-width: 800px) {
+    .left img {
+        display: none; /* Aquí debes proporcionar un valor válido para la propiedad 'display' */
+        /* Otros estilos para las imágenes en ese rango de ancho */
+    }
+}
+
+
+@media screen and (max-height: 700px) {
+    .about{
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+    }
+    .left{
+        display: none;
+    }
+
+    .right h1{
+        font-size: 45px;
+        margin-bottom: 10px;
+    }
+    
+    .right h2{
+        font-size: 45px;
+        color: red;
+    }
+    .right h3{
+        font-size: 100%;
+    }
+}
+
+@media screen and (max-height: 350px) {
+.right h2{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    color: red;
+}
+.right {
+    display: flex;
+}
 }
