--- a/react_project/src/components/footer/footer.css
+++ b/react_project/src/components/footer/footer.css
@@ -1,10 +1,13 @@
 footer{
+    position: relative;
     width: 100%;
     height: 200px;
     background-color: #202020;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
+
 }
 
 .fbox{
