--- a/react_project/src/index.css
+++ b/react_project/src/index.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@700&family=Pixelify+Sans:wght@500&family=Playfair+Display&family=Poppins:wght@100&family=Roboto+Condensed:wght@300&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
